# ragemash

./: CMakeLists.txt
src/: main.cpp
